fix most linter warnings