@@ -1,8 +1,6 @@
 package com.github.domanteli0;
 
 import java.util.*;
-import java.util.function.BiFunction;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
 
@@ -20,7 +18,7 @@ public record Hand(List<Card> cards) {
     // TODO: custom exception type
     public static Hand parse(String input) throws IllegalArgumentException {
         List<Card> cards = Stream
-            .of(input.split("\\ "))
+            .of(input.split(" "))
             .map(Card::parse)
             .toList();
 
@@ -28,7 +26,7 @@ public record Hand(List<Card> cards) {
     }
 
     public static Predicate<Hand> isNPair(int n) {
-        return (self) -> self.cards.stream()
+        return self -> self.cards.stream()
             .collect(groupingBy(Card::rank))
             .values().stream()
             .filter(list -> list.size() == 2)
@@ -39,7 +37,7 @@ public record Hand(List<Card> cards) {
         return cards.stream()
             .collect(groupingBy((Card::suit)))
             .values().stream()
-            .anyMatch((list) -> (long) list.size() == 5);
+            .anyMatch(list -> (long) list.size() == 5);
     }
 
     public boolean isFullHouse() {
@@ -47,17 +45,17 @@ public record Hand(List<Card> cards) {
     }
 
     public static Predicate<Hand> isNOfAKind(int n) {
-        return (self) -> self.cards.stream()
+        return self -> self.cards.stream()
             .collect(groupingBy((Card::rank)))
             .values().stream()
-            .anyMatch((list) -> (long) list.size() == n);
+            .anyMatch(list -> (long) list.size() == n);
     }
 
     public boolean isStraight() {
         var thisStream = cards.stream().map(Card::rank).sorted().toList();
 
         var royalFlushStream = Arrays.stream(values())
-            .dropWhile(rank -> !rank.equals(thisStream.get(0)))
+            .dropWhile(rank -> !rank.equals(thisStream.getFirst()))
             .limit(5);
 
         return Iterators.elementsEqual(
